--- a/.github/action/qemu/Dockerfile
+++ b/.github/action/qemu/Dockerfile
@@ -1,7 +1,7 @@
 FROM balenalib/qemux86-64-debian-python:latest
 
 COPY qemu.py /qemu.py
-COPY boot.img /boot.img
+COPY ../../../boot.img /boot.img
 
 RUN pip install --no-cache-dir -r requirements.txt
 
