--- a/.github/action/qemu/Dockerfile
+++ b/.github/action/qemu/Dockerfile
@@ -2,7 +2,8 @@ FROM balenalib/qemux86-64-debian-python:latest
 
 COPY qemu.py /qemu.py
 COPY boot.img /boot.img
+COPY requirements.txt /requirements.txt
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r /requirements.txt
 
 ENTRYPOINT [ "python", "/qemu.py" ]
